Timer is added & Design for displaying the entry is implemented

--- a/Src/index.html
+++ b/Src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./components/sidebar/sidebar.css">
     <link rel="stylesheet" type="text/css" href="./containers/timeTracker/timeTracker.css">
 
-    <link rel="icon" type="image/x-icon" href="./assets/clockify-logo.svg">
+    <link rel="icon" type="image/x-icon" href="./assets/icons/clockify-logo.svg">
     <title>Clockify</title>
 </head>
 <body>
@@ -23,6 +23,6 @@
 <script type="text/javascript" src="./components/sidebar/sidebar.js"></script>
 <script type="text/javascript" src="./containers/mainContent.js"></script>
 <script type="text/javascript" src="./containers/timeTracker/timeTracker.js"></script>
-    <script type="text/javascript" src="./events/timeTracker.js"></script>
+    <script type="text/javascript" src="./events/timeTrackerEvents.js"></script>
 
 </html>
