Duplicate and Delete entry implemented successfully

--- a/Src/index.html
+++ b/Src/index.html
@@ -13,7 +13,7 @@
     <title>Clockify</title>
 </head>
 <body>
-    
+
 </body>
 
 <script type="text/javascript" src="./containers/index.js"></script>
@@ -24,5 +24,6 @@
 <script type="text/javascript" src="./containers/mainContent.js"></script>
 <script type="text/javascript" src="./containers/timeTracker/timeTracker.js"></script>
     <script type="text/javascript" src="./events/timeTrackerEvents.js"></script>
+<script type="text/javascript" src="./events/sidebarEvents.js"></script>
 
 </html>
